Renamed PrimitivePropertyConfiguration (EF6 name) to be PropertyConfiguration (mirroring EF Core PropertyBuilder)

--- a/src/Microsoft.EntityFrameworkCore.Design/Microsoft.EntityFrameworkCore.Design.csproj
+++ b/src/Microsoft.EntityFrameworkCore.Design/Microsoft.EntityFrameworkCore.Design.csproj
@@ -85,7 +85,7 @@
     <Compile Include="EntityTypeConfiguration\ManyNavigationPropertyConfiguration.cs" />
     <Compile Include="EntityTypeConfiguration\ManyToManyNavigationPropertyConfiguration.cs" />
     <Compile Include="EntityTypeConfiguration\ModelBuilderExtensions.cs" />
-    <Compile Include="EntityTypeConfiguration\PrimitivePropertyConfiguration.cs" />
+    <Compile Include="EntityTypeConfiguration\PropertyConfiguration.cs" />
     <Compile Include="EntityTypeConfiguration\ReferenceNavigationConfiguration.cs" />
     <Compile Include="Infrastructure\DesignEventId.cs" />
     <Compile Include="Internal\DesignLoggerExtensions.cs" />
